syntax = "proto3";

package smarthome_ai_bot_api.v1;

service SmarthomeAIBotAPI {
  rpc SendPrompt(SendPromptRequest) returns (SendPromptResponse) {};
}

message SendPromptRequest {
  string prompt = 1;
}

message SendPromptResponse {
  string response = 1;
}
